[package]
name = "blockchain-edu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
sha2 = "0.10.6"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0.87"
libp2p = { version = "0.37.0", features = ["tcp-tokio", "mdns"] }
tokio = { version = "1.21.2", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync", "time"] }
hex = "0.4.3"
once_cell = "1.16.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"